# dip-bundestag-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/docs/: Aktivitaet.md  AktivitaetAnzeige.md  AktivitaetApi.md  AktivitaetListResponse.md  AktivitaetListResponseAllOf.md  AktivittenApi.md  Beschlussfassung.md  Bundesland.md  DefaultApi.md  Deskriptor.md  DokumentTextBase.md  Drucksache.md  DrucksacheApi.md  DrucksacheAutorenAnzeigeInner.md  DrucksacheListResponse.md  DrucksacheListResponseAllOf.md  DrucksacheText.md  DrucksacheTextListResponse.md  DrucksacheTextListResponseAllOf.md  DrucksachenApi.md  Fundstelle.md  GetVorgang404Response.md  GetVorgangList400Response.md  GetVorgangList401Response.md  Inkrafttreten.md  ListResponseBase.md  Person.md  PersonApi.md  PersonListResponse.md  PersonListResponseAllOf.md  PersonRole.md  PersonenstammdatenApi.md  Plenarprotokoll.md  PlenarprotokollApi.md  PlenarprotokollListResponse.md  PlenarprotokollListResponseAllOf.md  PlenarprotokollText.md  PlenarprotokollTextListResponse.md  PlenarprotokollTextListResponseAllOf.md  PlenarprotokolleApi.md  (+22 more)
python-client/sphinx-docs/: conf.py  index.rst
python-client/test/: test_aktivitaet.py  test_aktivitaet_anzeige.py  test_aktivitaet_api.py  test_aktivitaet_list_response.py  test_aktivitaet_list_response_all_of.py  test_aktivitten_api.py  test_beschlussfassung.py  test_bundesland.py  test_default_api.py  test_deskriptor.py  test_dokument_text_base.py  (+51 more)
(+79 files in other folders)
